--- a/clientesv2-app.html
+++ b/clientesv2-app.html
@@ -104,9 +104,9 @@
                     </td>
 
                     <td data-label="Acciones" class="text-center">
-                      <button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill mx-1">Informe de Liquidación <i class="fas fa-download"></i> 
+                      <button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill my-1">Informe de Liquidación <i class="fas fa-download"></i> 
                       </button>
-                        <button title="Devolver al cordinador" type="button" class="btn btn-icon btn-sm color-d rounded-pill mx-1">Otro documento <i class="fas fa-download"></i>
+                        <button title="Devolver al cordinador" type="button" class="btn btn-icon btn-sm color-d rounded-pill my-1">Otro documento <i class="fas fa-download"></i>
                       </button>
 
                     </td>
@@ -123,7 +123,7 @@
                     </td>
 
                     <td data-label="Acciones" class="text-center">
-                      <button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill mx-1">Informe de Liquidación <i class="fas fa-download"></i>  
+                      <button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill my-1">Informe de Liquidación <i class="fas fa-download"></i>  
                       </button>
                         
 
@@ -141,7 +141,7 @@
                     </td>
 
                     <td data-label="Acciones" class="text-center">
-                      <button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill mx-1">Informe de Liquidación <i class="fas fa-download"></i>  
+                      <button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill my-1">Informe de Liquidación <i class="fas fa-download"></i>  
                       </button>
                         
                     </td>
