--- a/clientesv2-app-corredor.html
+++ b/clientesv2-app-corredor.html
@@ -83,8 +83,8 @@
                   <td data-label="Estado"><span class="badge color-r p-2 rounded-pill"><i class="fas fa-info-circle"></i> Estado del caso 1</span> <a href="#" data-bs-toggle="tooltip"
                         data-bs-title="Descripción del estado del caso para ayudar al cliente"><i
                           class="far fa-question-circle"></i></a></td>
-                  <td data-label="Acciones" class="text-center"><button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill mx-1">Informe de Liquidación <i class="fas fa-download"></i> </button>
-                    <button title="Devolver al cordinador" type="button" class="btn btn-icon btn-sm color-d rounded-pill mx-1">Otro documento <i class="fas fa-download"></i> </button></td>
+                  <td data-label="Acciones" class="text-center"><button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill my-1">Informe de Liquidación <i class="fas fa-download"></i> </button>
+                    <button title="Devolver al cordinador" type="button" class="btn btn-icon btn-sm color-d rounded-pill my-1">Otro documento <i class="fas fa-download"></i> </button></td>
                     <td><div class="text-end"><a class="mas-detalles rounded-pill" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Mas detalles <i class="fas fa-arrow-down"></i></a></div></td>
                 </tr>
                 <tr class="align-middle">
@@ -205,7 +205,7 @@
                   <td data-label="Estado"><span class="badge color-e p-2 rounded-pill"><i class="fas fa-info-circle"></i> Estado del caso 2</span> <a href="#" data-bs-toggle="tooltip"
                         data-bs-title="Descripción del estado del caso para ayudar al cliente"><i
                           class="far fa-question-circle"></i></a></td>
-                  <td data-label="Acciones" class="text-center"><button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill mx-1">Informe de Liquidación <i class="fas fa-download"></i> </button></td>
+                  <td data-label="Acciones" class="text-center"><button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill my-1">Informe de Liquidación <i class="fas fa-download"></i> </button></td>
                      <td><div class="text-end"><a class="mas-detalles rounded-pill" data-bs-toggle="collapse" href="#multiCollapseExample2" role="button" aria-expanded="false" aria-controls="multiCollapseExample2">Mas detalles <i class="fas fa-arrow-down"></i></a></div></td>
                 </tr>
                 <tr class="align-middle">
@@ -326,7 +326,7 @@
                   <td data-label="Estado"><span class="badge color-f p-2 rounded-pill"><i class="fas fa-info-circle"></i> Estado del caso 3</span> <a href="#" data-bs-toggle="tooltip"
                         data-bs-title="Descripción del estado del caso para ayudar al cliente"><i
                           class="far fa-question-circle"></i></a></td>
-                  <td data-label="Acciones" class="text-center"><button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill mx-1">Informe de Liquidación <i class="fas fa-download"></i> </button></td>
+                  <td data-label="Acciones" class="text-center"><button title="Enviar al Analista" type="button" class="btn btn-icon btn-sm color-a rounded-pill my-1">Informe de Liquidación <i class="fas fa-download"></i> </button></td>
                      <td><div class="text-end"><a class="mas-detalles rounded-pill" data-bs-toggle="collapse" href="#multiCollapseExample3" role="button" aria-expanded="false" aria-controls="multiCollapseExample3">Mas detalles <i class="fas fa-arrow-down"></i></a></div></td>
                 </tr>
                 <tr class="align-middle">
